# declarative-day-workshop-2024

./: README.md
counter/contract/src/: contract.pnt
counter/counter-app/: Cargo.toml
counter/counter-app/src/: lib.rs
counter/counter-app/tests/: counter.rs
token/contract/src/: contract.pnt
token/token-app/: Cargo.toml
token/token-app/src/: lib.rs
token/token-app/tests/: tests.rs
