[package]
name = "token-app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = "4.5.9"
essential-app-utils = "0.1.0"
essential-deploy-contract = "0.1.0"
essential-hash = "0.1.0"
essential-rest-client = "0.1.0"
essential-types = "0.1.0"
essential-sign = "0.1.0" 
essential-signer = "0.1.0" 
essential-wallet = { version = "0.1.0", features = ["test-utils"] }
hex = "0.4.3"
pint-abi = "0.1.0" 
tokio = { version = "1.38.0", features = ["full"] }

[dev-dependencies]
essential-app-utils = { version = "0.1.0", features = ["test-utils"] }
